welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:1: error: Missing closing brace `}' assumed here
def redTicket(a:Int, b:Int, c:Int):Int = {
^